syntax = "proto3";
package serialization;

// A unique Request message with all the different types of requests
message Request {

	enum RequestType {
		GetNothing = 0;
	  GetNextMessage = 1;
	  SendMessage = 2;
	  GetOrganizationMembers = 3;
	  GetProofsForMember = 4;
	  PublishProof = 5;
	}

	message Message {
	  string toAddress = 1;
	  uint64 id = 2;
	  uint64 convo_id = 3;
	  bytes content = 4;
	}

	RequestType requestType = 1;
	Message message = 2;
}

// Simple Response  
message ResponseSuccess {
	bool success = 1;
	string error = 2;
}

// Response with a message
message ResponseMessage {
  string fromAddress = 1;
  uint64 id = 2;
  uint64 convo_id = 3;
  bytes content = 4;
}
